# happiness_prediction

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
.github/workflows/actions/build-application/: action.yml
basic/: World-happiness-report-updated_2024.csv
src/: runner.py
src/config/: .env  db.py  logger.py  model.py
src/db/: db.sqlite_2  db_model.py
src/model/: model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
